@@ -1,1 +1,1 @@
-10.5.1-digiumphones
+10.5.2-digiumphones
